added original source mechanism and metadata

--- a/alarms.html
+++ b/alarms.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.alarms
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/alarms.html
 ---
       <div id="gc-pagecontent">
         
