--- a/browserAction.html
+++ b/browserAction.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.browserAction
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/browserAction.html
 ---
       <div id="gc-pagecontent">
         
