--- a/declarativeWebRequest.html
+++ b/declarativeWebRequest.html
@@ -1,7 +1,8 @@
 ---
 layout: default-withsidebar
 title: chrome.declarativeWebRequest
-copyright: opera-google-ccby
+copyright: opera-google-
+originalsource: http://developer.chrome.com/trunk/extensions/declarativeWebRequest.html
 ---
       <div id="gc-pagecontent">
         
