--- a/event_pages.html
+++ b/event_pages.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: Event Pages
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/event_pages.html
 ---
       <div id="gc-pagecontent">
         <div id="toc">
