--- a/events.html
+++ b/events.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.events
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/events.html
 ---
       <div id="gc-pagecontent">
         
