--- a/i18n.html
+++ b/i18n.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.i18n
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/i18n.html
 ---
       <div id="gc-pagecontent">
         
