--- a/idle.html
+++ b/idle.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.idle
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/idle.html
 ---
       <div id="gc-pagecontent">
         
