--- a/manifest.html
+++ b/manifest.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: "Formats: Manifest Files" # this title needs quotes
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/manifest.html
 ---
       <div id="gc-pagecontent">
         <div id="toc">
