--- a/pageAction.html
+++ b/pageAction.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.pageAction
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/pageAction.html
 ---
       <div id="gc-pagecontent">
         
