--- a/permissions.html
+++ b/permissions.html
@@ -1,7 +1,8 @@
 ---
 layout: default-withsidebar
 title: chrome.permissions
-copyright: opera-google-ccby
+copyright: opera-google-
+originalsource: http://developer.chrome.com/trunk/extensions/permissions.html
 ---
       <div id="gc-pagecontent">
         
