--- a/webRequest.html
+++ b/webRequest.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.webRequest
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/webRequest.html
 ---
       <div id="gc-pagecontent">
         
