--- a/background_pages.html
+++ b/background_pages.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: Background Pages
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/background_pages.html
 ---
       <div id="gc-pagecontent">
         <div id="toc">
