--- a/contextMenus.html
+++ b/contextMenus.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.contextMenus
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/contextMenus.html
 ---
       <div id="gc-pagecontent">
         
