--- a/extension.html
+++ b/extension.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.extension
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/extension.html
 ---
       <div id="gc-pagecontent">
         
