--- a/management.html
+++ b/management.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.management
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/management.html
 ---
       <div id="gc-pagecontent">
         
