--- a/storage.html
+++ b/storage.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: chrome.storage
 copyright: opera-google-ccby
+originalsource: http://developer.chrome.com/trunk/extensions/storage.html
 ---
       <div id="gc-pagecontent">
         
