fixed some prettyprint omissions

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -63,7 +63,7 @@ INITIAL VERSION. NEEDS FURTHER EDITING
   <p>Choose one of the following categories for your extension:</p>
 
   <ul>
-    <li>News & Blogging</li>
+    <li>News &amp; Blogging</li>
     <li>Accessibility</li>
     <li>Entertainment</li>
     <li>Games</li>
