updated version number section with more recent info.

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -50,7 +50,7 @@ copyright: opera-ccby
 
 <h3 id="version-numbers">Choose a version number</h3>
 
-<p>The recommended version number for a new extension is "1.0". Bear in mind that you will need to increase the number each time you upload a new version as this enables extensions to auto-update. An increase in the minor version number (e.g. 1.1 to 1.2) is generally recommended for minor fixes or for feature additions or modifications, whereas an increase in the major version number (e.g. 1.1 to 2.0) is recommended when there are major improvements in functionality and/or significant changes in the user interface. Note that version numbers are treated as being in dictionary order, so version 2.50 is the same as 2.5, which is more recent than 2.11, for example.</p>
+<p>The version number can consist of one to four dot-separated integers. Examples are <code>1</code>, <code>1.3</code>, <code>2.0.4</code>, and <code>3.5.8.98</code>. Note that non-zero integers cannot start with 0 — in other words, <code>064</code> is not allowed. For more details, see the <a href="manifest.html#version">version documentation section</a>.</p>
 
 <h3 id="support-webpage">Create an extension support page (optional)</h3>
 
