--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ copyright: opera-ccby
 <div class="hero-unit">
  {% include h1.html %}
  <br>
- <p>This is our new documentation section for extensions in Opera 14.</p>
- <p>As Opera has switched <a href="http://my.opera.com/ODIN/blog/300-million-users-and-move-to-webkit">from Presto to Chromium</a>, our extensions infrastructure has also gotten a major overhaul: in Opera 14, Opera 11 &amp; 12’s extension format is no longer supported, and instead, we've switched to Chromium’s extension model. At this point, Opera 14 supports a subset of the Chromium extension APIs — with more to come —, as well as our own Speed Dial API.</p>
- <p>To get you started, we’ve prepared a number of tutorials and have included relevant API documentation as well. We’ve also created <a href="tut_oex2nex.html">a conversion tool</a> to make the transition as smooth as possible.</p>
- <p><a href="tut_getting_started.html" class="btn btn-primary btn-large">Let’s get started! »</a></p>
+ <p>This is our new documentation section explaining how to build extensions for the all new <a href="http://www.opera.com/computer/next">Chromium-based Opera browser</a>.</p>
+ <p>With Opera switching <a href="http://my.opera.com/ODIN/blog/300-million-users-and-move-to-webkit">from Presto to Chromium</a> and a complete UI remake, our extensions infrastructure has also gotten a major overhaul: from Opera 16 onward, Opera 11 &amp; 12’s extension format is no longer supported, and instead, we've switched to Chromium’s extension model. At this point, Opera 16 supports a subset of the Chromium extension APIs — with more to come —, as well as our own Speed Dial API.</p>
+ <p>To get you started, we’ve prepared a number of tutorials and have included relevant API documentation as well. We’ve also created <a href="conversion.html">a conversion tool</a> to make the transition as smooth as possible. If you have questions, <a href="contact.html">contact us</a>.</p>
+ <p><a href="tut_getting_started.html" class="btn btn-primary btn-large">Let’s get started »</a></p>
 </div>
