small addition to publishing guidelines

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -169,6 +169,7 @@ copyright: opera-ccby
 	<li>No external JavaScript is allowed. All JavaScript code must be contained in the extension. External APIs are ok.</li>
 	<li>Values in <code>manifest.json</code> must be sound and valid.</li>
 	<li>Speed Dial extensions cannot just be a static picture linking to a website. They must provide valuable functionality, such as e.g. just-in-time info.</li>
+	<li>Extensions cannot just consist of a button linking to a website. They must provide valuable functionality, such as e.g. a transformation applied on a page when a button is clicked.</li>
 	<li>We must be able to review the code in a reasonable manner. Therefor, the code shouldn't be obfuscated. Binary code is not ok.</li>
 	<li>The summary must answer the question: what does your extension do? It must be composed of grammatically correct and complete sentences.</li>
 	<li>The description must answer: 1) How do you use the extension? 2) What does the extension look like?</li>
