cleaned up some titles

--- a/tut_content_scripts.html
+++ b/tut_content_scripts.html
@@ -1,6 +1,6 @@
 ---
 layout: default-withsidebar
-title: Content Scripts
+title: Content scripts
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/content_scripts.html
 ---
