made a changes to runtime API doc, to change a couple of instances of Chrome to Opera

--- a/runtime.html
+++ b/runtime.html
@@ -554,7 +554,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/runtime.html
                 </div>
                 <div class="description">
               <p>
-                    Fired when the extension is first installed, when the extension is updated to a new version, and when Chrome is updated to a new version.
+                    Fired when the extension is first installed, when the extension is updated to a new version, and when Opera is updated to a new version.
                   </p>      <h4>Listener Parameters</h4>
                     <dl>
                       <div>  <a name="property-onInstalled-details"></a>  <dt>    <span class="variable">details</span>    <span class="property">      (                object      )    </span>  </dt>  <dd>    <dl>      <div>        <a name="property-details-reason"></a>        <dt>          <span class="variable">reason</span>          <span class="property">            (                            enumerated string ["install", "update", "chrome_update"]            )          </span>        </dt>        <dd>          The reason that this event is being dispatched.        </dd>      </div>      <div>        <a name="property-details-previousVersion"></a>        <dt>          <span class="variable">previousVersion</span>          <span class="property">            (              <span class="optional">optional</span>              string            )          </span>        </dt>        <dd>          Indicates the previous version of the extension, which has just been updated. This is present only if 'reason' is 'update'.        </dd>      </div>    </dl>  </dd></div>
@@ -602,7 +602,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/runtime.html
                 </div>
                 <div class="description">
               <p>
-                    Fired when a Chrome update is available, but isn't installed immediately because a browser restart is required.
+                    Fired when an Opera update is available, but isn't installed immediately because a browser restart is required.
                   </p>  </div>
               </div>
               <div>
