couple of very minor changes to the Storage and Windows API refs

--- a/storage.html
+++ b/storage.html
@@ -376,7 +376,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/storage.html
                 <div>
                   <dt><span class="property">sync</span> <span class="type_name">  (    <a href="storage.html#type-StorageArea">StorageArea</a>  )</span></dt>
               <dd>
-                    Items in the <code>sync</code> storage area are synced using Chrome Sync.
+                    Items in the <code>sync</code> storage area are synced using Opera Sync.
                   </dd>    <h4 id="sync-properties">
                     Properties of <a href="storage.html#property-sync">sync</a>
                   </h4>
