--- a/windows.html
+++ b/windows.html
@@ -215,7 +215,7 @@ create, modify, and rearrange windows in the browser.
                 <div>
                   <dt><span class="property">WINDOW_ID_NONE</span> <span class="type_name">  (    <code>-1</code>  )</span></dt>
               <dd>
-                    The windowId value that represents the absence of a chrome browser window.
+                    The windowId value that represents the absence of an Opera browser window.
                   </dd>  </div>
               </div>
               <div>
@@ -1021,7 +1021,7 @@ create, modify, and rearrange windows in the browser.
                 </div>
                 <div class="description">
               <p>
-                    Fired when the currently focused window changes. Will be chrome.windows.WINDOW_ID_NONE if all chrome windows have lost focus. Note: On some Linux window managers, WINDOW_ID_NONE will always be sent immediately preceding a switch from one chrome window to another.
+                    Fired when the currently focused window changes. Will be chrome.windows.WINDOW_ID_NONE if all Opera windows have lost focus. Note: On some Linux window managers, WINDOW_ID_NONE will always be sent immediately preceding a switch from one Opera window to another.
                   </p>      <h4>Listener Parameters</h4>
                     <dl>
                       <div>  <a name="property-onFocusChanged-windowId"></a>  <dt>    <span class="variable">windowId</span>    <span class="property">      (                integer      )    </span>  </dt>  <dd>    ID of the newly focused window.  </dd></div>
