--- a/tut_match_patterns.html
+++ b/tut_match_patterns.html
@@ -8,7 +8,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/match_patterns.html
       <div id="gc-pagecontent">
 
 <p>
-<a href="content_scripts.html">Content scripts</a> operate on
+<a href="tut_content_scripts.html">Content scripts</a> operate on
 a set of URLs defined by match patterns.
 You can put one or more match patterns
 in the <code>"matches"</code> part of
