--- a/browserAction.html
+++ b/browserAction.html
@@ -284,7 +284,7 @@ Use browser actions to put icons in the main Opera toolbar, to the right of the 
                 </code></div>
                 <div class="description">
                   <p>
-                    Sets the html document to be opened as a popup when the user clicks on the browser action's icon.
+                    Sets the HTML document to be opened as a popup when the user clicks on the browser action's icon.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
@@ -328,7 +328,7 @@ Use browser actions to put icons in the main Opera toolbar, to the right of the 
                                 </code>
                               </dt>
                               <dd>
-                                The html file to show in a popup.  If set to the empty string (''), no popup is shown.
+                                The HTML file to show in a popup.  If set to the empty string (''), no popup is shown.
                               </dd>
                             </div>
                           </dl>
@@ -344,7 +344,7 @@ Use browser actions to put icons in the main Opera toolbar, to the right of the 
                 </code></div>
                 <div class="description">
                   <p>
-                    Gets the html document set as the popup for this browser action.
+                    Gets the HTML document set as the popup for this browser action.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
