--- a/pageAction.html
+++ b/pageAction.html
@@ -351,7 +351,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/pageAction.html
                 </code></div>
                 <div class="description">
                   <p>
-                    Sets the html document to be opened as a popup when the user clicks on the page action's icon.
+                    Sets the HTML document to be opened as a popup when the user clicks on the page action's icon.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
@@ -395,7 +395,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/pageAction.html
                                 </code>
                               </dt>
                               <dd>
-                                The html file to show in a popup.  If set to the empty string (''), no popup is shown.
+                                The HTML file to show in a popup.  If set to the empty string (''), no popup is shown.
                               </dd>
                             </div>
                           </dl>
@@ -411,7 +411,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/pageAction.html
                 </code></div>
                 <div class="description">
                   <p>
-                    Gets the html document set as the popup for this page action.
+                    Gets the HTML document set as the popup for this page action.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
