added mention of padlock shape icons not being allows inside address bar

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -159,7 +159,7 @@ copyright: opera-ccby
 	<li>It must perform as described.</li>
 	<li>There should be no obvious bugs.</li>
 	<li>Icons of all sizes should be similar in style.</li>
-	<li>The icons, screenshots and graphic design must be of acceptable quality. Anti-aliasing PNGs with transparent backgrounds are preferred. Note that interlaced PNG-files are currently not supported, due to a <a href="http://www.pythonware.com/library/pil/handbook/format-png.htm">limitation of the image library</a> we're using. Avoid this effect in your screenshots.</li>
+	<li>The icons, screenshots and graphic design must be of acceptable quality. Anti-aliased PNGs with transparent backgrounds are preferred. Note that interlaced PNG-files are currently not supported, due to a <a href="http://www.pythonware.com/library/pil/handbook/format-png.htm">limitation of the image library</a> we're using. Avoid this effect in your screenshots.</li>
 	<li>If defined, the support webpage must be relevant to the extension.</li>
 	<li>It must not collect private information without authorization from the user.</li>
 	<li>It must not send private data to an external store, for example through XHR.</li>
@@ -170,6 +170,7 @@ copyright: opera-ccby
 	<li>Values in <code>manifest.json</code> must be sound and valid.</li>
 	<li>Speed Dial extensions cannot just be a static picture linking to a website. They must provide valuable functionality, such as e.g. just-in-time info.</li>
 	<li>Extensions cannot just consist of a button linking to a website. They must provide valuable functionality, such as e.g. a transformation applied on a page when a button is clicked.</li>
+	<li>Icons inside the address bar (page actions) cannot have a padlock shape.</li>
 	<li>We must be able to review the code in a reasonable manner. Therefor, the code shouldn't be obfuscated. Binary code is not ok.</li>
 	<li>The summary must answer the question: what does your extension do? It must be composed of grammatically correct and complete sentences.</li>
 	<li>The description must answer: 1) How do you use the extension? 2) What does the extension look like?</li>
