--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -127,7 +127,7 @@ copyright: opera-ccby
 	<li><p>Take your screenshots with a white background.</p></li>
 	<li><p>Disable other extensions you have installed, so that yours can take center stage.</p></li>
 	<li><p>Make sure to include the relevant part of your functionality.</p></li>
-	<li><p>Show the location of the extension in the browser UI. For example, if your extension has a button on the toolbar, focus the screenshot on this location (see Figure 2 for an example). Make a screenshot of the extension in action. In an image editor, center the image and crop the screenshot, leaving some whitespace if necessary.</p><p><img src="active_crop.png" alt="Extension functionality explained via a screenshot with the area of interest roughly centered" /></p><p class="comment">Figure 2: Extension functionality explained via a screenshot. The screenshot is cropped and the area of interest is roughly centered.</p></li>
+	<li><p>Show the location of the extension in the browser UI. For example, if your extension has a button on the toolbar, focus the screenshot on this location (see Figure 2 for an example). Make a screenshot of the extension in action. In an image editor, center the image and crop the screenshot, leaving some whitespace if necessary.</p></li>
 	<li><p>Show how the extension interacts with a webpage, if this is the case. Make sure the screenshot highlights the functionality of your extension and not merely the webpage.</p></li>
 	<li><p>Use the default UI of the browser (consider using a clean install.)</p></li>
 </ul>
